# blender-mcp

./: .cursorrules  .dockerignore  .gitignore  .mcpbignore  .pre-commit-config.yaml  AGENTS.md  ASSESSMENT.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  INSTALL.md  Makefile  README.md  README_NEW.md  _fix_lints.py  blender-mcp-backend.spec  build.ps1  build_dxt.py  build_github.py  check_result.py  claude_download_guide.txt  docker-compose.yml  extension.toml  extension.wasm  fix-bpy-imports.ps1  fix_all_imports.py  fix_imports.py  glama.json  justfile  llms-full.txt  llms.txt  manifest.json  mcpb.json  pyproject.toml  quick_fix.py  requirements.txt  restart.bat  run_server.py  setup.py  (+6 more)
.cursor/: mcp.json  rules.md  settings.json  tasks.json
.github/workflows/: build-dxt.yml  build-mcpb.yml  build-release.yml  ci-cd.yml  ci.yml  release.yml  security-scan.yml
_llm_test_scripts/: test_fastmcp.py
assets/prompts/: examples.json  system.md  user.md
data/scripts/: demos.json  furniture.json  houses.json  nature.json  procedural.json  robots.json  rooms.json  vehicles.json
data/secrets/: jwt_secret.txt
docs/: ADDONS_MESH_SPLAT.md  AI_CONSTRUCTION_ASSESSMENT.md  AI_CONSTRUCTION_ECOSYSTEM.md  API.md  ARCHITECTURE.md  BLENDER_COMMS.md  BLENDER_MCP_FUNCTIONALITY_PLAN.md  BLENDER_MCP_STATUS_AND_FIX_ANALYSIS.md  Blender-MCP_Status_Report.html  Blender-MCP_Status_Report.md  CODE_QUALITY_IMPROVEMENT_PLAN.md  COMPETITIVE_ANALYSIS.md  CONFIGURATION.md  CROSS_MCP_EXPORT_SYSTEM.md  DEVELOPMENT.md  DOCKER.md  DOCUMENTATION_INDEX.md  DXT_BUILDING_STANDARDS.md  FEATURES.md  FINAL_ASSESSMENT_2025-08-10.md  GAUSSIAN_SPLATS_ADDON.md  GITHUB_DXT_BUILDING.md  LLMs.txt Standard.md  MCP_EXTENSION_STANDARDS.md  MONITORING.md  PRD.md  PRODUCT_REQUIREMENTS.md  ROADMAP.md  TOOLS_AND_REALTIME.md  TOOL_REFERENCE.md  TROUBLESHOOTING.md  USAGE.md  VRM_PIPELINE.md  blender_bridge_addon.py  grease_pencil.md  installation.md  vse.md  windsurf_transformation_success_2025-08-10.md
docs-private/: TRIPLE_INITIATIVES_GUIDE.md
docs/blender/: TOOL_REFERENCE.md  VSE_GUIDE.md
docs/github/: COMPLETE_SETUP_GUIDE.md  COMPLETE_TYPE_FIX_GUIDE.md  TROUBLESHOOTING.md
docs/glama/: GLAMA_AI_RESCAN_GUIDE.md  GLAMA_INTEGRATION.md  README.md
docs/glama/platform/: CI_CD_GLAMA_OPTIMIZATION_GUIDE.md  GLAMA_AI_OPTIMIZATION_SUMMARY.md  GLAMA_AI_PLATFORM.md  GLAMA_AI_RESCAN_GUIDE.md  GLAMA_GITHUB_APP_SETUP.md  GLAMA_INTEGRATION.md  GLAMA_RESCAN_EMAIL.txt  GOLD_STATUS_UPDATE_2025_10_08.md  README.md
dxt/: README.md  dxt.json  install.py  manifest.json  package.py
dxt/server/: =4.8.0  main.py
dxt/server/blender_mcp/: cli.py  config.py  decorators.py  help.py  server.py
examples/: README.md  asset_repositories_example.py  basic_client.py  download_example.py  gui_mode_example.py  requirements.txt
mcpb/: manifest.json  mcpb.json  requirements.txt
mcpb-packaging/: README.md  mcpb.json
mcpb-packaging/manifests/: mcpb_manifest.json
mcpb-packaging/prompts/: advanced_workflow_templates.md  quick_start_templates.md
mcpb-packaging/scripts/: build-mcpb-package.ps1  test-mcpb-installation.ps1  validate-mcpb-package.ps1
mcpb/assets/prompts/: 3d_creation_assistant.md  examples.json  system.md  user.md
mcpb/server/: main.py
mcpb/src/blender_mcp/: __init__.py  app.py  cli.py  compat.py  config.py  decorators.py  help.py  server.py  server_fixed.py  server_new.py  update_imports.py
monitoring/grafana/dashboards/: blender-mcp-overview.json
monitoring/prometheus/: prometheus.yml
monitoring/promtail/: promtail.yml
native/: Cargo.toml  build.ps1  tauri.conf.json
native/src/: backend.rs  main.rs
native/windows/: hooks.nsh
scripts/: build-mcpb.ps1  cua-nsis-config.json  cua-smoke.py  smoke_test.py
skills/autonomous-modeling/: SKILL.md
skills/pipeline-automation/: SKILL.md
src/: lib.rs
src/blender_mcp/: __init__.py  __main__.py  agentic.py  app.py  cli.py  compat.py  config.py  decorators.py  exceptions.py  help.py  prompts.py  server.py  server_fixed.py  server_new.py  transport.py  update_imports.py
src/blender_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/blender_mcp/handlers/: __init__.py  addon_handler.py  ai_generate_handler.py  animation_handler.py  asset_repository_handler.py  atlasing_handler.py  batch_handler.py  camera_handler.py  compositor_handler.py  export_handler.py  export_presets_handler.py  file_io_handler.py  furniture_creation_handler.py  furniture_handler.py  geonodes_handler.py  grease_pencil_handler.py  import_handler.py  lighting_handler.py  material_handler.py  materials_baking_handler.py  mesh_edit_handler.py  mesh_handler.py  mesh_validation_handler.py  modifier_handler.py  particle_handler.py  physics_handler.py  render_handler.py  rendering_handler.py  rigging_handler.py  scene_handler.py  scripting_handler.py  sculpt_handler.py  selection_handler.py  shader_handler.py  shapekeys_handler.py  simulation_handler.py  splatting_handler.py  texture_handler.py  (+6 more)
systemd/: blender-mcp-http.service  blender-mcp.service
tests/: README.md  __init__.py  conftest.py  pytest.ini  run_tests.py  test_addon_handler.py  test_blender_mcp.py  test_construct_tools.py  test_e2e_workflows.py  test_error.txt  test_error2.txt  test_error4.txt  test_fixes_0_4_1.py  test_integration_blender_executor.py  test_integration_handlers.py  test_performance.py  test_phase1_tools.py  test_phase2_tools.py  test_phase3_tools.py  test_phase4_tools.py  test_phase5_tools.py  test_polyhaven_api.py  test_repository.py  test_session_tools.py  test_splatting.py  test_status_tools.py  test_unit_blender_executor.py  test_unit_utils.py  test_utils.py
tests/integration/: test_blender_executor.py  test_mcpb_integration.py  test_server_startup.py
tests/megatest/: __init__.py  conftest.py
tests/unit/: test_app.py  test_config.py  test_exceptions.py  test_server.py  test_utils.py
webapp/: start.ps1  stop.ps1
webapp/frontend/: biome.json  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.json  vite.config.ts
(+258 files in other folders)
