[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blender-mcp"
version = "0.1.0"
description = "Blender Model Control Protocol - A tool for programmatically controlling Blender"
readme = "README.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "AGPL-3.0"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastmcp>=2.10.1",
    "loguru>=0.7.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "typing-extensions>=4.8.0",
    "psutil>=5.9.0",
    "numpy>=1.21.0",
    "defusedxml>=0.7.1",  # For secure XML parsing
]

[tool.uv]
dev-dependencies = [
    # Testing
    "pytest>=8.3.4",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.24.0",
    "pytest-xdist>=3.0.0",

    # Linting & Formatting
    "ruff>=0.1.6",
    "mypy>=1.8.0",
    "black>=24.0.0",
    "isort>=5.13.0",

    # Type Checking
    "pyright>=1.1.390",
    "types-setuptools>=69.0.0",

    # Security
    "bandit>=1.7.0",
    "safety>=3.0.0",

    # Building & Publishing
    "build>=1.0.0",
    "twine>=5.0.0",

    # Pre-commit
    "pre-commit>=3.6.0",
]

[project.scripts]
blender-mcp = "blender_mcp.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pyright]
include = ["src/"]
pythonVersion = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = [
    "**/__init__.py",
    "**/tests/**",
    "**/setup.py",
]
