[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blender-mcp"
dynamic = ["version"]
description = "AI-Powered 3D Creation - Control Blender with natural language through MCP"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "FlowEngineer sandraschi", email = "sandraschi@example.com"}
]
maintainers = [
    {name = "FlowEngineer sandraschi", email = "sandraschi@example.com"}
]
keywords = [
    "mcp", "mcp-server", "fastmcp", "ai", "automation",
    "blender", "3d", "modeling", "animation", "rendering",
    "creative-tools", "productivity", "python", "asyncio"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Framework :: AsyncIO",
]
dependencies = [
    "fastmcp>=2.13.0,<3.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "numpy>=1.21.0,<2.0.0",
    "pillow>=8.0.0,<11.0.0",
    "bpy>=3.0.0; sys_platform != 'win32'",
    "websockets>=15.0.1,<16.0.0",
]

[project.optional-dependencies]
dev = [
        # Testing
        "pytest>=8.3.4",
        "pytest-cov>=4.1.0",
        "pytest-mock>=3.12.0",
        "pytest-asyncio>=0.24.0",
        "pytest-xdist>=3.0.0",

        # Linting & Formatting
        "ruff>=0.1.6",
        "mypy>=1.8.0",
        "black>=24.0.0",
        "isort>=5.13.0",

        # Type Checking
        "pyright>=1.1.390",

        # Security
        "bandit>=1.7.0",
        "safety>=3.0.0",

        # Building & Publishing
        "build>=1.0.0",
        "twine>=5.0.0",

        # Pre-commit
        "pre-commit>=3.6.0",
    ]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]

[project.scripts]
blender-mcp = "blender_mcp.cli:main"
blender-mcp-server = "blender_mcp.server:main_stdio"

[project.entry-points."mcp.servers"]
blender-mcp = "blender_mcp.server:create_server"

[tool.setuptools]
package-dir = { "" = "src" }

# ========================================================================================
# Tool Configurations for CI/CD
# ========================================================================================

[tool.ruff]
line-length = 100
target-version = "py38"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["B011"]

[tool.ruff.isort]
known-first-party = ["blender_mcp"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["blender.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["src/blender_mcp"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "docs"]
skips = ["B101", "B601"]

[tool.hatch.version]
path = "src/blender_mcp/__init__.py"

[tool.pyright]
include = ["src/"]
pythonVersion = "3.11"
