[package]
name = "blender_mcp_native"
version = "0.1.0"
description = "Tauri 2.0 desktop app for blender-mcp"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", default-features = false, features = ["tray-icon", "wry", "common-controls-v6", "dynamic-acl"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
